--- a/HTML/DragAndDrop/dragAndDrop3.html
+++ b/HTML/DragAndDrop/dragAndDrop3.html
@@ -215,7 +215,7 @@ function createItem2() {
 function createBox() {
 
     var contents =         
-                  "<li class='itemBox' id='"+MyIDvariable+"'>"
+                  "<li class='itemBox' id='itemBox'>"
                  + "<div style='float:left;'>"
                  + "<span class='itemNum'></span> "
                  + "<input type='text' name='item' style='width:300px;'/>"
