--- a/HTML/MapService/mapService3.html
+++ b/HTML/MapService/mapService3.html
@@ -32,7 +32,7 @@
 
 
 
-    <a href ="https://map.kakao.com/?sName=%27+122,38+%27&eName=%27+126,37">ㅇㅇ</a>
+    <a href ="https://map.kakao.com/?sName=%27+126,38+%27&eName=%27+125.11,38">길찾기</a>
 
 
     
