--- a/HTML/MapService/mapService3.html
+++ b/HTML/MapService/mapService3.html
@@ -32,9 +32,9 @@
 
 
 
-    <a href ="https://map.kakao.com/?sName=%27+126,38+%27&eName=%27+125.11,38">길찾기</a>
+    <a href ="https://map.kakao.com/?sName=%27+청진옥 본점+%27&eName=%27+서울 중구 소공동 85-3">길찾기</a>
 
-
+    kakaomap://route?sp=37.51119865054613,127.02165424220854&ep=37.5705756133826,126.98531278713301&by=PUBLICTRANSIT
     
 
 
