--- a/HTML/fileData/fileData.html
+++ b/HTML/fileData/fileData.html
@@ -6,8 +6,18 @@
     <title>text Limit</title>
 
 
+    <style>
+
+
+      
+
+    </style>
+
         <script src= "https://code.jquery.com/jquery-1.12.4.js"></script>
         <script>
+
+
+
 
 var fileData  = new File( fileName, [options]);
 
@@ -16,7 +26,7 @@ formData.append('username', 'Bob');
 
 console.log(formData.get('username'));
 
-
+            
 
         </script>
 
@@ -27,7 +37,7 @@ console.log(formData.get('username'));
 </head>
 <body>
    
-
+<img src="../image/Instagram.png">
 
 </body>
 </html>
