--- a/HTML/html_CSS/html_float1.html
+++ b/HTML/html_CSS/html_float1.html
@@ -26,8 +26,8 @@
     </head>
 <body>
     <div>
-    <img src="/image/2019120200459_0.png">
-    
+    <input type="image" src="../image/yun.png">
+    <img src="../image/yun.png">
     <h1>연어</h1>
     <hr>
     
